--- a/index.html
+++ b/index.html
@@ -1,61 +1,116 @@
 <!Doctype HTML>
-<!--Author : Ellen Woodward
-    Date Created : 3/2/22
-    Page Description : Home page of a company sales website-->
-
-<html lang="en"> <!--Set primary language to English-->
+<!--Author - Ellen Woodward
+    Date - 17/2/22-->
+<html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="description" content="Comapny website">
-        <meta name="keywords" content="Sales, Computers, Electronic">
+        <meta name="description" content="Fresh Groceries and Meats at Sligo Foodmarket">
+        <meta name="keywords" content="Food, Sligo, Fresh, Meat, Groceries">
         <meta name="author" content="Ellen Woodward">
 
-        <title>Your Website</title>
-        <link rel="stylesheet" type="text/css" href="styles/style.css"/>
+        <title>Foodmarket Sligo</title>
+        <link rel="stylesheet" type="text/css" href="styles/styles.css"/>
+        <link rel="icon" href="images/favicon.ico" type="image/gif" sizes="16x16"/>
     </head>
     <body>
-        <!--Body section - Displayed on screen-->
+
         <header>
-            <!--Includes image and title-->
-            <img src="images/html5%20logo.png" alt="HTML5 Logo" height="100" width="100">
-            <h1>Welcome to this page - using heading 1 tag</h1>
-            <nav>
-                <center><p>Navigation menu. This is a centred paragraph</p></center>
-            </nav>
+            <img class="logo" src="images/logo.png" alt="logo"/>
+            <h1>Foodmarket Sligo</h1>
         </header>
+        <nav>
+            <ul>
+                <li id="active"><a href="index.html">Home</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="video.html">Video</a></li>
+                <li><a href="audio.html">Audio</a></li>
+            </ul>             
+        </nav>
 
-        <main>
-            <!--Main content-->
-            <h1>This is a heading 1 - Company Sales Page Most Important SEO Ranking</h1>
-            <img src="images/HTMLExample.jpg" alt="Example" height="300" width="800">
-            <h2>This is a heading 2 - Last Years Sales Selection SEO to Find These Details</h2>
-            <h3>This is a heading 3 - Best Product Sales Last Year</h3>
-            <h4>This is a heading 4 - Check Out Last Year's Prize Winners</h4>
-            <h5>This is a heading 5 - Sales Persons Awards Selection</h5>
-
-            <section> <!--Groups content together-->
-                <h3>This is a section of the page to display sales</h3>
-                <p>Sales this month were up by 20%</p>
+        <main id="mainContent">
+            <section>
+                <h2>About Us</h2>
+                <img src="images/front.JPG" id="bigPic" alt="front"/>
+                <p>Fine dining in Sligo, a very fancy plcae that serves the freshest food
+                    All year around.</p>
             </section>
-
-            <article>
-                <header>
-                    <h2>Article Title</h2>
-                    <p><i>Posted Yesterday</i></p>
-                </header>
-                <p><u>Article 1</u></p>
-            </article>
-           
-            <aside> <!--Needs CSS to move to side of screen-->
-                <h3><b>Aside Section</b> - this will need CSS to place it to the side of the screen</h3>
-            </aside>
-
+            <section class="manager">
+                <h2>Manager</h2>
+                <img class="showImages" src="images/manager.jpg" alt="manager"/>
+                <h3>Manager Name</h3>
+                <p id="descText">Managers are very cool and run the business. 
+                    Our manager is the best manager in Sligo. We are not at all biased. 
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc condimentum elit 
+                    a augue porta, eget mollis metus consectetur. Morbi egestas gravida tortor non 
+                    consectetur. Duis pulvinar sapien ac pellentesque aliquam. Interdum et malesuada 
+                    fames ac ante ipsum primis in faucibus. Quisque neque dui, auctor mollis porta sit 
+                    amet, sollicitudin eget libero. Aenean vulputate placerat fermentum. Interdum et 
+                    malesuada fames ac ante ipsum primis in faucibus. Proin sit amet congue neque. 
+                    Sed euismod ornare mauris, at hendrerit quam. In et nisi non sapien tempor bibendum 
+                    nec eget mauris. Fusce aliquam, urna vitae pharetra venenatis, ex nunc dictum felis, 
+                    eget porttitor nisi metus nec ligula. Aenean fringilla libero id libero iaculis 
+                    gravida. Praesent id ipsum quam. Proin eget faucibus nulla, quis fringilla dolor.</p>
+            </section>
+            <section>
+                <h2>Kitchen Staff</h2>
+                <h3>Chef</h3>
+                <section class="col_detail">
+                    <img src="images/chef_female.jpg" alt="Chef"/>
+                    <h3>About our chef</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc condimentum elit 
+                        a augue porta, eget mollis metus consectetur. Morbi egestas gravida tortor non 
+                        consectetur. Duis pulvinar sapien ac pellentesque aliquam. Interdum et malesuada 
+                        fames ac ante ipsum primis in faucibus. Quisque neque dui, auctor mollis porta sit 
+                        amet, sollicitudin eget libero. Aenean vulputate placerat fermentum. Interdum et 
+                        malesuada fames ac ante ipsum primis in faucibus. Proin sit amet congue neque. 
+                        Sed euismod ornare mauris, at hendrerit quam. In et nisi non sapien tempor bibendum 
+                        nec eget mauris. Fusce aliquam, urna vitae pharetra venenatis, ex nunc dictum felis, 
+                        eget porttitor nisi metus nec ligula. Aenean fringilla libero id libero iaculis 
+                        gravida. Praesent id ipsum quam. Proin eget faucibus nulla, quis fringilla dolor.</p>
+                </section>
+                <h3>Chef 2</h3>
+                <section class="col_detail">
+                    <img src="images/chef_male.jpg" alt="Chef"/>
+                    <h3>About our chef</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc condimentum elit 
+                        a augue porta, eget mollis metus consectetur. Morbi egestas gravida tortor non 
+                        consectetur. Duis pulvinar sapien ac pellentesque aliquam. Interdum et malesuada 
+                        fames ac ante ipsum primis in faucibus. Quisque neque dui, auctor mollis porta sit 
+                        amet, sollicitudin eget libero. Aenean vulputate placerat fermentum. Interdum et 
+                        malesuada fames ac ante ipsum primis in faucibus. Proin sit amet congue neque. 
+                        Sed euismod ornare mauris, at hendrerit quam. In et nisi non sapien tempor bibendum 
+                        nec eget mauris. Fusce aliquam, urna vitae pharetra venenatis, ex nunc dictum felis, 
+                        eget porttitor nisi metus nec ligula. Aenean fringilla libero id libero iaculis 
+                        gravida. Praesent id ipsum quam. Proin eget faucibus nulla, quis fringilla dolor.</p>
+                </section>
+            </section>
         </main>
-        <footer><!--Bottom of screen-->
-            <h3>Company Address</h3>
-            <p>123 Main Street<br>Mullingar<br>Co.West Meath<br></p>
-            <center><p>Copyright 2022 Ellen Woodward</p></center>
-            <img src="images/W3C_HTML5_certified.png" alt="HTML5 CSS Logo">
+        <aside>
+            <h2>Food Links</h2>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="menu.html">Menu</a></li>
+                    <li><a href="video.html">Video</a></li>
+                    <li><a href="audio.html">Audio</a></li>
+                </ul>
+            <h2>Good Foods</h2>
+                <ol>
+                    <li>Apples</li>
+                    <li>Oranges</li>
+                    <li>Pears</li>
+                    <li>Grapefruit</li>
+                    <li>Fruit</li>
+                    <li>Veg</li>
+                </ol>
+        </aside>
+        <footer>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="menu.html">Menu</a></li>
+                <li><a href="video.html">Video</a></li>
+                <li><a href="audio.html">Audio</a></li>
+            </ul>
+            <small>&copy; 2022 Sligo Food</small>
         </footer>
     </body>
     </html>
