--- a/sunholiday.html
+++ b/sunholiday.html
@@ -4,10 +4,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta name="description" content="Holiday club, holiday in the sun">
-        <meta name="keywords" content="Holiday club, holiday in the sun, A quiet beach to relax, Lorem ipsum">
+        <meta name="description" content="Holiday club, Seaside Locations, Choice of beaches">
+        <meta name="keywords" content="Seaside Locations, Choice of beaches Lorem ipsum">
 
-        <title>Holiday Page</title>
+        <title>Sun Holidays</title>
         <link rel="stylesheet" type="text/css" href="styles/styles.css"/>
     </head>
     <body>
@@ -18,8 +18,8 @@
             <h1>Holiday Club</h1>
                 <nav>
                     <ul>
-                        <li class="selected">Home</li>
-                        <li><a href="sunholiday.html">Sun Holiday</a></li>
+                        <li><a href="index.html">Home</a></li>
+                        <li class="selected">Sun Holiday</li>
                         <li><a href="contact.html">Contact Us</a></li>
                     </ul>             
                 </nav>
@@ -28,26 +28,17 @@
         <a href="#bottom">Go to bottom</a>
 
         <main>
-            <section>
-                <h2>Holiday in the sun</h2>
-                <article>
-                    <h3>Holidays</h3>
-                <img class="treeImage" src="images/treeseaside.jpg" alt="Plam trees on beach"/>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc condimentum elit 
-                    a augue porta, eget mollis metus consectetur. Morbi egestas gravida tortor non 
-                    consectetur. Duis pulvinar sapien ac pellentesque aliquam. Interdum et malesuada 
-                    fames ac ante ipsum primis in faucibus. Quisque neque dui, auctor mollis porta sit 
-                    amet, sollicitudin eget libero. Aenean vulputate placerat fermentum. Interdum et 
-                    malesuada fames ac ante ipsum primis in faucibus. Proin sit amet congue neque. 
-                    Sed euismod ornare mauris, at hendrerit quam. In et nisi non sapien tempor bibendum 
-                    nec eget mauris. Fusce aliquam, urna vitae pharetra venenatis, ex nunc dictum felis, 
-                    eget porttitor nisi metus nec ligula. Aenean fringilla libero id libero iaculis 
-                    gravida. Praesent id ipsum quam. Proin eget faucibus nulla, quis fringilla dolor.</p>
-                </article>
-
+            <section class="seasideLocations">
+                
+                <h2>Seaside Locations</h2>
+                <img src="images/beach.jpg" alt="Sea and beach"/>
+                <img src="images/island.jpg" alt="Appartments overlooking sea on cliff"/>
+                <img src="images/seals.jpg" alt="Sail boats and sea"/>
+                
+            </section>
                 <article>
                     <h3>A quiet beach to relax</h3>
-                    <p>
+                    <p class="col">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc condimentum elit 
                     a augue porta, eget mollis metus consectetur. Morbi egestas gravida tortor non 
                     consectetur. Duis pulvinar sapien ac pellentesque aliquam. Interdum et malesuada 
@@ -60,15 +51,14 @@
                     gravida. Praesent id ipsum quam. Proin eget faucibus nulla, quis fringilla dolor.
                     </p>
                 </article>
-            </section>
         </main>
         <a href="#top">Go to top</a>
         <a id="bottom"></a>
 
         <footer>
             <ul>
-                <li><a href="index.html" style="color: #f3b104;">Home</a></li>
-                <li><a href="sunholiday.html">Sun Holidays</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="sunholiday.html" style="color: #f3b104;">Sun Holidays</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
             <p>&copy; 2022 Holiday Club</p>
